--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,15 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    
+    - task: NodeTaskRunnerInstaller@0
+      inputs:
+        nodeVersion: '6'
     - task: Docker@2
       displayName: Build an image
       inputs:
         command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile.dev'
         tags: |
           $(tag)
+    
