--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,8 @@
 version: '3'
 services:
   web:
-     build:
-      context: .
-      dockerfile: Dockerfile.dev
+   build:
+     context: .
+     dockerfile: Dockerfile
      ports:
-       - "3000:3000"
-  tests:
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-    command: ["npm","run","test"]
+      - '80:80'
