--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "20230521.11",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
