--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
   - docker run -e CI=true sym12384/docker-react npm run test
+
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "react-frontend"
+  env: "React-frontend-env"
+  bucket_name: "elasticbeanstalk-us-east-1-853110405500"
+  bucket_path: "react-frontend"
+  on:
+    branch: master
+  access_key_id : $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
