--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,18 +25,13 @@ stages:
       inputs:
         nodeVersion: '6'
       
-    - task: ArchiveFiles@2
-      inputs:
-        rootFolderOrFile: '$(Build.BinariesDirectory)'
-        includeRootFolder: true
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/Sample.zip'
-        replaceExistingArchive: true
     - task: Docker@2
       displayName: Build an image
       inputs:
         command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile.dev'
         tags: |
           $(tag)
+
+     
     
